fixed sidebar collapse on page load, stays open now

--- a/src/layout/Sidebar/Sidebar.scss
+++ b/src/layout/Sidebar/Sidebar.scss
@@ -166,6 +166,7 @@
         top: 0;
         width: 5rem;
         height: 100vh;
+        animation: openNavbarOnPageLoad 0.1s ease-out;
 
         &:hover {
             width: 16rem;
@@ -198,5 +199,14 @@
                 margin: 0 0.5rem;
             }
         }
+    }
+}
+
+@keyframes openNavbarOnPageLoad {
+    0% {
+        width: 16rem;
+    }
+    100% {
+        width: 16rem;
     }
 }
